# BackendForAI

./: .gitignore  README.md  pyproject.toml
chroma_db/: chroma.sqlite3
data/: medicine_completion_test.jsonl  medicine_with_embeddings.jsonl
res/: prompt.txt
src/: main.py
src/api/: ai_chat_api.py  app.py
src/core/: pipeline.py  pipeline_dependencies.py
src/embedding/: base.py  controller.py  model.py  service.py
src/llm/: llm.py
utils/: embedding.py  init_chroma_db.py
